--- a/k8s/services/market-data-service.yaml
+++ b/k8s/services/market-data-service.yaml
@@ -19,8 +19,8 @@ data:
   SPRING_KAFKA_PROPERTIES_SCHEMA_REGISTRY_URL: http://schema-registry-service:8081
   SPRING_APPLICATION_NAME: market-data-service
   SPRING_REDIS_HOST: redis-service
-  SPRING_REDIS_PORT: 6379
-  SPRING_REDIS_TIMEOUT: 2000
+  SPRING_REDIS_PORT: "6379"
+  SPRING_REDIS_TIMEOUT: "2000"
 ---
 apiVersion: apps/v1
 kind: Deployment
