--- a/market-data-service/src/main/resources/application.yaml
+++ b/market-data-service/src/main/resources/application.yaml
@@ -7,7 +7,8 @@ spring:
     name: market-data-service
   kafka:
     bootstrap-servers: localhost:9092
-    schema-registry-url: http://localhost:8081
+    properties:
+      schema.registry.url: ${SPRING_KAFKA_PROPERTIES_SCHEMA_REGISTRY_URL:http://localhost:8081}
     admin:
       fail-fast: false
       properties:
