--- a/portfolio-service/src/main/resources/application.yaml
+++ b/portfolio-service/src/main/resources/application.yaml
@@ -37,6 +37,10 @@ grpc:
       address: static://localhost:6567
       enable-keep-alive: true
       negotiation-type: plaintext
+    market-data-service:
+      address: static://localhost:6569
+      enable-keep-alive: true
+      negotiation-type: plaintext
 security:
   jwt:
     secret_key: dXNhY2hldl9odWVzb3NfdXNhY2hldl9odWVzb3NfdXNhY2hldl9odWVzb3M=
