--- a/k8s/services/portfolio-service.yaml
+++ b/k8s/services/portfolio-service.yaml
@@ -25,6 +25,8 @@ data:
   SPRING_KAFKA_PROPERTIES_SCHEMA_REGISTRY_URL: http://schema-registry-service:8081
   GRPC_SERVER_PORT: '6565'
   SERVER_PORT: '8083'
+  GRPC_CLIENT_ANALYTIC-SERVICE_ADDRESS: static://portfolio-service:6565
+  GRPC_CLIENT_MARKET-DATA-SERVICE_ADDRESS: static://market-data-service:6565
   SPRING_APPLICATION_NAME: portfolio-service
 ---
 apiVersion: apps/v1
