--- a/k8s/common/jwt-secret.yaml
+++ b/k8s/common/jwt-secret.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: jwt-secret
 type: Opaque
-data:
-  SECURITY_JWT_SECRET_KEY: dXNhY2hldl9odWVzb3NfdXNhY2hldl9odWVzb3NfdXNhY2hldl9odWVzb3M=
+stringData:
+  SECURITY_JWT_SECRET_KEY: "${{ secrets.SECURITY_JWT_SECRET_KEY }}"
