--- a/k8s/postgres/postgres-secret.yaml
+++ b/k8s/postgres/postgres-secret.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: postgres-secret
 type: Opaque
-data:
-  POSTGRES_USER: cG9zdGdyZXM=
-  POSTGRES_PASSWORD: MTIzNDU2
+stringData:
+  POSTGRES_USER: "${{ secrets.POSTGRES_USER }}"
+  POSTGRES_PASSWORD: "${{ secrets.POSTGRES_PASSWORD }}"
