--- a/market-data-service/src/main/resources/application.yaml
+++ b/market-data-service/src/main/resources/application.yaml
@@ -21,7 +21,7 @@ spring:
     timeout: ${SPRING_REDIS_TIMEOUT:2000}
 security:
   jwt:
-    secret_key: dXNhY2hldl9odWVzb3NfdXNhY2hldl9odWVzb3NfdXNhY2hldl9odWVzb3M=
+    secret_key: ${SECURITY_JWT_SECRET_KEY}
     access_token_expiration: 900000 #15 min
     refresh_token_expiration: 3600000 #1 hour
 grpc:
