--- a/portfolio-service/src/main/resources/application.yaml
+++ b/portfolio-service/src/main/resources/application.yaml
@@ -7,8 +7,8 @@ spring:
     name: portfolio-service
   datasource:
     url: jdbc:postgresql://localhost:5432/portfolio_service
-    username: postgres
-    password: 123456
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driverClassName: org.postgresql.Driver
   jpa:
     hibernate:
@@ -44,6 +44,6 @@ grpc:
       negotiation-type: plaintext
 security:
   jwt:
-    secret_key: dXNhY2hldl9odWVzb3NfdXNhY2hldl9odWVzb3NfdXNhY2hldl9odWVzb3M=
+    secret_key: ${SECURITY_JWT_SECRET_KEY}
     access_token_expiration: 900000 #15 min
     refresh_token_expiration: 3600000 #1 hour
