--- a/analytic-service/pom.xml
+++ b/analytic-service/pom.xml
@@ -121,6 +121,12 @@
             <version>1.3.2</version>
             <scope>compile</scope>
         </dependency>
+        <!-- Documentation -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.6</version>
+        </dependency>
 
     </dependencies>
 
