--- a/analytic-service/src/main/resources/application.yaml
+++ b/analytic-service/src/main/resources/application.yaml
@@ -14,7 +14,8 @@ spring:
       connection-timeout: 30000
   kafka:
     bootstrap-servers: localhost:9092
-    schema-registry-url: http://localhost:8081
+    properties:
+      schema.registry.url: ${SPRING_KAFKA_PROPERTIES_SCHEMA_REGISTRY_URL:http://localhost:8081}
     admin:
       fail-fast: false
       properties:
