added prefix path for frontend

--- a/instrument-service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/instrument-service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: classpath:/db/changelog/changeset/create-instrument-table.sql
+  - include:
+      file: classpath:/db/changelog/changeset/init-instrument-table.sql
